[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqc"
author = "yaq developers"
author-email = "blaise@untzag.com"
home-page = "https://yaq.fyi"
requires-python = ">=3.6"
requires = ["fastavro>=0.4"]
description-file="README.md"
classifiers=[
        "Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://gitlab.com/yaq/yaq-python"
Documentation = "https://python.yaq.fyi/yaqc/"
Issues = "https://gitlab.com/yaq/yaq-python/issues"


[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.black]
line-length = 99
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
