[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaqc"
authors = [{name="yaq developers"}]
requires-python = ">=3.6"
dependencies = ["fastavro>=1.7"]
dynamic = ["version"]
license = "LGPL-3.0-only"
description="Generic yaq client."
readme="README.md"
classifiers=[
  "Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Topic :: Scientific/Engineering",
]

[project.urls]
"Home Page" = "https://yaq.fyi"
Source = "https://github.com/yaq-project/yaq-python"
Issues = "https://github.com/yaq-project/yaq-python/issues"
Documentation = "https://yaq.fyi/blog/yaqc/"


[project.optional-dependencies]
dev = ["black", "pre-commit"]

[tool.hatch.version]
path = "yaqc/__version__.py"

[tool.black]
line-length = 99
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
