[build-system]
requires = ["flit_core >=2,<3.2"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_core"
dist-name = "yaqd-core"
author = "yaq developers"
home-page = "https://yaq.fyi"
requires-python = ">=3.7"
requires = ["appdirs", "tomli", "tomli-w", "fastavro>=1.4.0"]
description-file="README.md"
classifiers=[
        "Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Documentation = "http://yaq-core-python.yaq.fyi/"
Source = "https://github.com/yaq-project/yaq-python"
Issues = "https://github.com/yaq-project/yaq-python/-/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
