[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaqd-core"
author = [{name="yaq developers"}]
requires-python = ">=3.7"
dependencies = ["platformdirs", "tomli", "tomli-w", "fastavro>=1.4.0"]
readme="README.md"
dynamic = ["version"]
license = "LGPL-3.0-only"
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

[project.urls]
"Home Page" = "https://yaq.fyi"
Documentation = "http://yaq-core-python.yaq.fyi/"
Source = "https://github.com/yaq-project/yaq-python"
Issues = "https://github.com/yaq-project/yaq-python/issues"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[tool.hatch.version]
path = "yaqd_core/__version__.py"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
