[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_fakes"
dist-name = "yaqd-fakes"
author = "yaq Developers"
author-email = "blaise@untzag.com"
home-page = "https://gitlab.com/yaq/yaqd-fakes"
requires-python = ">=3.7"
requires = ["yaqd-core>=2020.06.2"]
description-file="README.md"
classifiers=[
        "Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://gitlab.com/yaq/yaq-python"
Issues = "https://gitlab.com/yaq/yaq-python/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-fake-continuous-hardware="yaqd_fakes._fake_continuous_hardware:FakeContinuousHardware.main"
yaqd-fake-discrete-hardware="yaqd_fakes._fake_discrete_hardware:FakeDiscreteHardware.main"
yaqd-fake-triggered-sensor="yaqd_fakes._fake_triggered_sensor:FakeTriggeredSensor.main"
yaqd-fake-has-turret="yaqd_fakes._fake_has_turret:FakeHasTurret.main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
