[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_fakes"
dist-name = "yaqd-fakes"
author = "yaq developers"
home-page = "https://yaq.fyi"
requires-python = ">=3.7"
requires = ["yaqd-core>=2022.3.0"]
description-file="README.md"
classifiers=[
        "Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://github.com/yaq-project/yaq-python"
Issues = "https://github.com/yaq-project/yaq-python/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-fake-continuous-hardware="yaqd_fakes._fake_continuous_hardware:FakeContinuousHardware.main"
yaqd-fake-discrete-hardware="yaqd_fakes._fake_discrete_hardware:FakeDiscreteHardware.main"
yaqd-fake-triggered-sensor="yaqd_fakes._fake_triggered_sensor:FakeTriggeredSensor.main"
yaqd-fake-has-turret="yaqd_fakes._fake_has_turret:FakeHasTurret.main"
yaqd-fake-sensor="yaqd_fakes._fake_sensor:FakeSensor.main"
yaqd-fake-spectrometer="yaqd_fakes._fake_spectrometer:FakeSpectrometer.main"
yaqd-fake-camera="yaqd_fakes._fake_camera:FakeCamera.main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
