[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaqd-fakes"
authors = [{name="yaq developers"}]
requires-python = ">=3.7"
dependencies = ["yaqd-core>=2022.3.0"]
readme="README.md"
license="LGPL-3.0-only"
dynamic=["version"]
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

[project.urls]
"Home page" = "https://yaq.fyi"
Source = "https://github.com/yaq-project/yaq-python"
Issues = "https://github.com/yaq-project/yaq-python/issues"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[project.scripts]
yaqd-fake-continuous-hardware="yaqd_fakes._fake_continuous_hardware:FakeContinuousHardware.main"
yaqd-fake-discrete-hardware="yaqd_fakes._fake_discrete_hardware:FakeDiscreteHardware.main"
yaqd-fake-furnace="yaqd_fakes._fake_furnace:FakeFurnace.main"
yaqd-fake-triggered-sensor="yaqd_fakes._fake_triggered_sensor:FakeTriggeredSensor.main"
yaqd-fake-has-turret="yaqd_fakes._fake_has_turret:FakeHasTurret.main"
yaqd-fake-sensor="yaqd_fakes._fake_sensor:FakeSensor.main"
yaqd-fake-spectrometer="yaqd_fakes._fake_spectrometer:FakeSpectrometer.main"
yaqd-fake-camera="yaqd_fakes._fake_camera:FakeCamera.main"
yaqd-fake-has-transformed-position="yaqd_fakes._fake_has_transformed_position:FakeHasTransformedPosition.main"

[tool.hatch.version]
path="yaqd_fakes/__version__.py"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
